# GPUComplexityExplorer

./: .gitignore  CMakeLists.txt  README.md  clean_build.sh  external.repos
apps/: CMakeLists.txt  exp.cu  gol.cpp  heat.cpp  heat.cu  thc.cpp
cmake/: ConfigureMagnum.cmake
include/: ComputeManager.hpp  Field2DShader.hpp  Matrix.hpp  NCube.hpp  ResourceManager.hpp  ResourcePrimitives.hpp  Vector.hpp  Visualizer.hpp  color_t.hpp  kernels.hpp  lib.hpp  macros.hpp
include/compute/: Accessors.hpp  Node.hpp  kernels.hpp
include/core/: .MemoryManager.hpp.swp  MemoryManager.hpp  ResourceManager.hpp  ResourcePrimitives.hpp
include/cuda/: kernels.hpp
include/data/: Field2D.hpp  Indexable.hpp  Property.hpp  PropertySet.hpp  Type.hpp  data.hpp
include/graphics/: Field2DShader.hpp  ShaderSources.hpp  Visualizer.hpp
include/internal/: aliases.hpp
include/internal/shaders/: shaders.conf
include/macros/: cpp20.hpp  cuda.hpp  iteration.hpp  todo.hpp
include/math/: Matrix.hpp  NCube.hpp  Vector.hpp
include/types/: color_t.hpp  count_t.hpp
shaders/: Field2D.frag  Field2D.vert
src/: Field2DShader.cpp  ResourceManager.cpp  ShaderSources.cpp  Visualizer.cpp  gol.cpp  kernels.cu  main.cpp
src/compute/: kernels.cu
src/core/: MemoryManager.cpp  ResourceManager.cpp
src/cuda/: kernels.cu
src/data/: Type.cpp
src/graphics/: Field2DShader.cpp  ShaderSources.cpp  Visualizer.cpp
tests/: CMakeLists.txt  TestVec2f.cpp  TestVec2i.cpp  TestVector.hpp
